source/input/Lexer.re2c

//
// Copyright 2026 Cade Weinberg
//
// Permission is hereby granted, free of charge, to any person
// obtaining a copy of this software and associated documentation
// files (the “Software”), to deal in the Software without
// restriction, including without limitation the rights to use,
// copy, modify, merge, publish, distribute, sublicense, and/or
// sell copies of the Software, and to permit persons to whom the
// Software is furnished to do so, subject to the following
// conditions:
//
// The above copyright notice and this permission notice shall be
// included in all copies or substantial portions of the Software.
//
// THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND,
// EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
// OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
// NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
// HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
// WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
// FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
// OTHER DEALINGS IN THE SOFTWARE.
//

#include "input/Lexer.hpp"
#include "utility/Error.hpp"

namespace tbc {
Lexer::Lexer()
    : YYTOKEN(nullptr), YYCURSOR(nullptr), YYMARKER(nullptr),
      YYCTXMARKER(nullptr), YYLIMIT(nullptr) {}

Lexer::Lexer(std::string_view view)
    : YYTOKEN(view.data()), YYCURSOR(view.data()), YYMARKER(view.data()),
      YYCTXMARKER(view.data()), YYLIMIT(view.data() + view.length()) {}

void Lexer::set(std::string_view view) {
  YYTOKEN = view.data();
  YYCURSOR = view.data();
  YYMARKER = view.data();
  YYCTXMARKER = view.data();
  YYLIMIT = view.data() + view.length();
}

void Lexer::reset() {
  YYTOKEN = nullptr;
  YYCURSOR = nullptr;
  YYMARKER = nullptr;
  YYCTXMARKER = nullptr;
  YYLIMIT = nullptr;
}

std::string_view Lexer::current() const {
  // YYTOKEN is always <= to YYCURSOR thus std::distance always
  // returns >= 0 thus this static cast is always lossless
  return {YYTOKEN, static_cast<size_t>(std::distance(YYTOKEN, YYCURSOR))};
}

/*!re2c
  re2c:yyfill:enable = 0;
  re2c:eof = 0;

  re2c:define:YYCTYPE      = "unsigned char";
*/

/*!include:re2c "UnicodeCategories.re"*/

/*!re2c

  integer = [0-9][0-9]*;

  fractional = [0-9]* "." [0-9]+ | [0-9]+ ".";
  exponent   = 'e' [+-]? [0-9]+;
  float      = fractional exponent? | [0-9]+ exponent;

  // Simplified "Unicode Identifier and Pattern Syntax"
  // see https://unicode.org/reports/tr31
  // #TODO: is this good enough for programming langauge use?
  id_start     = L | Nl | [$_];
  id_continue  = id_start | Mn | Mc | Nd | Pc | [\u200D\u05F3];
  identifier   = id_start id_continue*;

  end = "\x00";

  ws = [ \t\v\n\r]*;
 */

leaf::result<Token> Lexer::next() {
  while (true) {
    YYTOKEN = YYCURSOR;
    /*!re2c
      *  { return leaf::new_error (std::format("unexpected character.")); }
      $  { return Token::end; }
      ws { continue; }

      "return" { return Token::return_; }
      "let"    { return Token::let; }
      "fn"     { return Token::fn; }
      "nil"    { return Token::nil; }
      "true"   { return Token::true_; }
      "false"  { return Token::false_; }
      "Nil"    { return Token::typeNil; }
      "Bool"   { return Token::typeBool; }
      "I64"    { return Token::typeI64; }

      "&"  { return Token::and_; }
      "|"  { return Token::or_; }
      "^"  { return Token::xor_; }
      "!"  { return Token::not_; }
      "="  { return Token::equals; }
      "==" { return Token::equalsEquals; }
      "!=" { return Token::notEquals; }
      "<"  { return Token::less; }
      "<=" { return Token::lessEquals; }
      ">"  { return Token::greater; }
      ">=" { return Token::greaterEquals; }
      "+"  { return Token::plus; }
      "-"  { return Token::minus; }
      "*"  { return Token::star; }
      "/"  { return Token::forwardSlash; }
      "%"  { return Token::percent; }
      "("  { return Token::beginParenthesis; }
      ")"  { return Token::endParenthesis; }

      integer    { return Token::integer; }
      identifier { return Token::label; }
     */
  }
}

} // namespace tbc
