source/input/Lexer.cpp
/* Generated by re2c 4.4 on Thu Apr  2 11:01:34 2026 */
#line 1 "C:/Users/cadew/source/repos/cadeweinberg/tbc/source/input/Lexer.re2c"

//
// Copyright 2026 Cade Weinberg
//
// Permission is hereby granted, free of charge, to any person
// obtaining a copy of this software and associated documentation
// files (the “Software”), to deal in the Software without
// restriction, including without limitation the rights to use,
// copy, modify, merge, publish, distribute, sublicense, and/or
// sell copies of the Software, and to permit persons to whom the
// Software is furnished to do so, subject to the following
// conditions:
//
// The above copyright notice and this permission notice shall be
// included in all copies or substantial portions of the Software.
//
// THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND,
// EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
// OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
// NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
// HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
// WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
// FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
// OTHER DEALINGS IN THE SOFTWARE.
//

#include "input/Lexer.hpp"
#include "utility/Error.hpp"

namespace tbc {
Lexer::Lexer()
    : YYTOKEN(nullptr), YYCURSOR(nullptr), YYMARKER(nullptr),
      YYCTXMARKER(nullptr), YYLIMIT(nullptr) {}

Lexer::Lexer(std::string_view view)
    : YYTOKEN(view.data()), YYCURSOR(view.data()), YYMARKER(view.data()),
      YYCTXMARKER(view.data()), YYLIMIT(view.data() + view.length()) {}

void Lexer::set(std::string_view view) {
  YYTOKEN = view.data();
  YYCURSOR = view.data();
  YYMARKER = view.data();
  YYCTXMARKER = view.data();
  YYLIMIT = view.data() + view.length();
}

void Lexer::reset() {
  YYTOKEN = nullptr;
  YYCURSOR = nullptr;
  YYMARKER = nullptr;
  YYCTXMARKER = nullptr;
  YYLIMIT = nullptr;
}

std::string_view Lexer::current() const {
  // YYTOKEN is always <= to YYCURSOR thus std::distance always
  // returns >= 0 thus this static cast is always lossless
  return {YYTOKEN, static_cast<size_t>(std::distance(YYTOKEN, YYCURSOR))};
}

#line 66 "C:/Users/cadew/source/repos/cadeweinberg/tbc/source/input/Lexer.re2c"


#line 1 "C:/Users/cadew/source/repos/cadeweinberg/tbc/source/input/UnicodeCategories.re"
#line 40 "C:/Users/cadew/source/repos/cadeweinberg/tbc/source/input/UnicodeCategories.re"

#line 68 "C:/Users/cadew/source/repos/cadeweinberg/tbc/source/input/Lexer.re2c"


#line 88 "C:/Users/cadew/source/repos/cadeweinberg/tbc/source/input/Lexer.re2c"


leaf::result<Token> Lexer::next() {
  while (true) {
    YYTOKEN = YYCURSOR;
    
#line 80 "C:/Users/cadew/source/repos/cadeweinberg/tbc/source/input/Lexer.cpp"
{
	unsigned char yych;
	unsigned int yyaccept = 0;
	yych = *YYCURSOR;
	switch (yych) {
		case '\t':
		case '\n':
		case '\v':
		case '\r':
		case ' ': goto yy3;
		case '$':
		case 'A':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'm':
		case 'o':
		case 'p':
		case 'q':
		case 's':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy5;
		case '%': goto yy8;
		case '(': goto yy9;
		case ')': goto yy10;
		case '*': goto yy11;
		case '+': goto yy12;
		case '-': goto yy13;
		case '/': goto yy14;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy15;
		case '<': goto yy17;
		case '=': goto yy19;
		case '>': goto yy21;
		case 'B': goto yy23;
		case 'I': goto yy24;
		case 'N': goto yy25;
		case 'f': goto yy26;
		case 'l': goto yy27;
		case 'n': goto yy28;
		case 'r': goto yy29;
		case 't': goto yy30;
		case 0xC2: goto yy31;
		case 0xC3: goto yy32;
		case 0xC4:
		case 0xC5:
		case 0xC6:
		case 0xC7:
		case 0xC8:
		case 0xC9:
		case 0xCA:
		case 0xD0:
		case 0xD1:
		case 0xD3:
		case 0xDA: goto yy33;
		case 0xCB: goto yy34;
		case 0xCD: goto yy35;
		case 0xCE: goto yy36;
		case 0xCF: goto yy37;
		case 0xD2: goto yy38;
		case 0xD4: goto yy39;
		case 0xD5: goto yy40;
		case 0xD6: goto yy41;
		case 0xD7: goto yy42;
		case 0xD8: goto yy43;
		case 0xD9: goto yy44;
		case 0xDB: goto yy45;
		case 0xDC: goto yy46;
		case 0xDD: goto yy47;
		case 0xDE: goto yy48;
		case 0xDF: goto yy49;
		case 0xE0: goto yy50;
		case 0xE1: goto yy51;
		case 0xE2: goto yy52;
		case 0xE3: goto yy53;
		case 0xE4: goto yy54;
		case 0xE5:
		case 0xE6:
		case 0xE7:
		case 0xE8:
		case 0xEB:
		case 0xEC: goto yy55;
		case 0xE9: goto yy56;
		case 0xEA: goto yy57;
		case 0xED: goto yy58;
		case 0xEF: goto yy59;
		case 0xF0: goto yy60;
		default:
			if (YYLIMIT <= YYCURSOR) goto yy490;
			goto yy1;
	}
yy1:
	++YYCURSOR;
yy2:
#line 94 "C:/Users/cadew/source/repos/cadeweinberg/tbc/source/input/Lexer.re2c"
	{ return leaf::new_error (std::format("unexpected character.")); }
#line 219 "C:/Users/cadew/source/repos/cadeweinberg/tbc/source/input/Lexer.cpp"
yy3:
	yych = *++YYCURSOR;
	switch (yych) {
		case '\t':
		case '\n':
		case '\v':
		case '\r':
		case ' ': goto yy3;
		default: goto yy4;
	}
yy4:
#line 96 "C:/Users/cadew/source/repos/cadeweinberg/tbc/source/input/Lexer.re2c"
	{ continue; }
#line 233 "C:/Users/cadew/source/repos/cadeweinberg/tbc/source/input/Lexer.cpp"
yy5:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
yy6:
	switch (yych) {
		case '$':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy5;
		case 0xC2: goto yy61;
		case 0xC3: goto yy63;
		case 0xC4:
		case 0xC5:
		case 0xC6:
		case 0xC7:
		case 0xC8:
		case 0xC9:
		case 0xCA:
		case 0xCC:
		case 0xD0:
		case 0xD1:
		case 0xD3:
		case 0xDA: goto yy64;
		case 0xCB: goto yy65;
		case 0xCD: goto yy66;
		case 0xCE: goto yy67;
		case 0xCF: goto yy68;
		case 0xD2: goto yy69;
		case 0xD4: goto yy70;
		case 0xD5: goto yy71;
		case 0xD6: goto yy72;
		case 0xD7: goto yy73;
		case 0xD8: goto yy74;
		case 0xD9: goto yy75;
		case 0xDB: goto yy76;
		case 0xDC: goto yy77;
		case 0xDD: goto yy78;
		case 0xDE: goto yy79;
		case 0xDF: goto yy80;
		case 0xE0: goto yy81;
		case 0xE1: goto yy82;
		case 0xE2: goto yy83;
		case 0xE3: goto yy84;
		case 0xE4: goto yy85;
		case 0xE5:
		case 0xE6:
		case 0xE7:
		case 0xE8:
		case 0xEB:
		case 0xEC: goto yy86;
		case 0xE9: goto yy87;
		case 0xEA: goto yy88;
		case 0xED: goto yy89;
		case 0xEF: goto yy90;
		case 0xF0: goto yy91;
		case 0xF3: goto yy92;
		default: goto yy7;
	}
yy7:
#line 123 "C:/Users/cadew/source/repos/cadeweinberg/tbc/source/input/Lexer.re2c"
	{ return Token::label; }
#line 355 "C:/Users/cadew/source/repos/cadeweinberg/tbc/source/input/Lexer.cpp"
yy8:
	++YYCURSOR;
#line 118 "C:/Users/cadew/source/repos/cadeweinberg/tbc/source/input/Lexer.re2c"
	{ return Token::percent; }
#line 360 "C:/Users/cadew/source/repos/cadeweinberg/tbc/source/input/Lexer.cpp"
yy9:
	++YYCURSOR;
#line 119 "C:/Users/cadew/source/repos/cadeweinberg/tbc/source/input/Lexer.re2c"
	{ return Token::beginParenthesis; }
#line 365 "C:/Users/cadew/source/repos/cadeweinberg/tbc/source/input/Lexer.cpp"
yy10:
	++YYCURSOR;
#line 120 "C:/Users/cadew/source/repos/cadeweinberg/tbc/source/input/Lexer.re2c"
	{ return Token::endParenthesis; }
#line 370 "C:/Users/cadew/source/repos/cadeweinberg/tbc/source/input/Lexer.cpp"
yy11:
	++YYCURSOR;
#line 116 "C:/Users/cadew/source/repos/cadeweinberg/tbc/source/input/Lexer.re2c"
	{ return Token::star; }
#line 375 "C:/Users/cadew/source/repos/cadeweinberg/tbc/source/input/Lexer.cpp"
yy12:
	++YYCURSOR;
#line 114 "C:/Users/cadew/source/repos/cadeweinberg/tbc/source/input/Lexer.re2c"
	{ return Token::plus; }
#line 380 "C:/Users/cadew/source/repos/cadeweinberg/tbc/source/input/Lexer.cpp"
yy13:
	++YYCURSOR;
#line 115 "C:/Users/cadew/source/repos/cadeweinberg/tbc/source/input/Lexer.re2c"
	{ return Token::minus; }
#line 385 "C:/Users/cadew/source/repos/cadeweinberg/tbc/source/input/Lexer.cpp"
yy14:
	++YYCURSOR;
#line 117 "C:/Users/cadew/source/repos/cadeweinberg/tbc/source/input/Lexer.re2c"
	{ return Token::forwardSlash; }
#line 390 "C:/Users/cadew/source/repos/cadeweinberg/tbc/source/input/Lexer.cpp"
yy15:
	yych = *++YYCURSOR;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy15;
		default: goto yy16;
	}
yy16:
#line 122 "C:/Users/cadew/source/repos/cadeweinberg/tbc/source/input/Lexer.re2c"
	{ return Token::integer; }
#line 409 "C:/Users/cadew/source/repos/cadeweinberg/tbc/source/input/Lexer.cpp"
yy17:
	yych = *++YYCURSOR;
	switch (yych) {
		case '=': goto yy93;
		default: goto yy18;
	}
yy18:
#line 110 "C:/Users/cadew/source/repos/cadeweinberg/tbc/source/input/Lexer.re2c"
	{ return Token::less; }
#line 419 "C:/Users/cadew/source/repos/cadeweinberg/tbc/source/input/Lexer.cpp"
yy19:
	yych = *++YYCURSOR;
	switch (yych) {
		case '=': goto yy94;
		default: goto yy20;
	}
yy20:
#line 108 "C:/Users/cadew/source/repos/cadeweinberg/tbc/source/input/Lexer.re2c"
	{ return Token::equals; }
#line 429 "C:/Users/cadew/source/repos/cadeweinberg/tbc/source/input/Lexer.cpp"
yy21:
	yych = *++YYCURSOR;
	switch (yych) {
		case '=': goto yy95;
		default: goto yy22;
	}
yy22:
#line 112 "C:/Users/cadew/source/repos/cadeweinberg/tbc/source/input/Lexer.re2c"
	{ return Token::greater; }
#line 439 "C:/Users/cadew/source/repos/cadeweinberg/tbc/source/input/Lexer.cpp"
yy23:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 0x00: goto yy7;
		case 'o': goto yy96;
		default: goto yy6;
	}
yy24:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 0x00: goto yy7;
		case '6': goto yy97;
		default: goto yy6;
	}
yy25:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 0x00: goto yy7;
		case 'i': goto yy98;
		default: goto yy6;
	}
yy26:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 0x00: goto yy7;
		case 'a': goto yy99;
		case 'n': goto yy100;
		default: goto yy6;
	}
yy27:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 0x00: goto yy7;
		case 'e': goto yy102;
		default: goto yy6;
	}
yy28:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 0x00: goto yy7;
		case 'i': goto yy103;
		default: goto yy6;
	}
yy29:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 0x00: goto yy7;
		case 'e': goto yy104;
		default: goto yy6;
	}
yy30:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 0x00: goto yy7;
		case 'r': goto yy105;
		default: goto yy6;
	}
yy31:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0xAA:
		case 0xB5:
		case 0xBA: goto yy5;
		default: goto yy2;
	}
yy32:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x80:
		case 0x81:
		case 0x82:
		case 0x83:
		case 0x84:
		case 0x85:
		case 0x86:
		case 0x87:
		case 0x88:
		case 0x89:
		case 0x8A:
		case 0x8B:
		case 0x8C:
		case 0x8D:
		case 0x8E:
		case 0x8F:
		case 0x90:
		case 0x91:
		case 0x92:
		case 0x93:
		case 0x94:
		case 0x95:
		case 0x96:
		case 0x98:
		case 0x99:
		case 0x9A:
		case 0x9B:
		case 0x9C:
		case 0x9D:
		case 0x9E:
		case 0x9F:
		case 0xA0:
		case 0xA1:
		case 0xA2:
		case 0xA3:
		case 0xA4:
		case 0xA5:
		case 0xA6:
		case 0xA7:
		case 0xA8:
		case 0xA9:
		case 0xAA:
		case 0xAB:
		case 0xAC:
		case 0xAD:
		case 0xAE:
		case 0xAF:
		case 0xB0:
		case 0xB1:
		case 0xB2:
		case 0xB3:
		case 0xB4:
		case 0xB5:
		case 0xB6:
		case 0xB8:
		case 0xB9:
		case 0xBA:
		case 0xBB:
		case 0xBC:
		case 0xBD:
		case 0xBE:
		case 0xBF: goto yy5;
		default: goto yy2;
	}
yy33:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x80:
		case 0x81:
		case 0x82:
		case 0x83:
		case 0x84:
		case 0x85:
		case 0x86:
		case 0x87:
		case 0x88:
		case 0x89:
		case 0x8A:
		case 0x8B:
		case 0x8C:
		case 0x8D:
		case 0x8E:
		case 0x8F:
		case 0x90:
		case 0x91:
		case 0x92:
		case 0x93:
		case 0x94:
		case 0x95:
		case 0x96:
		case 0x97:
		case 0x98:
		case 0x99:
		case 0x9A:
		case 0x9B:
		case 0x9C:
		case 0x9D:
		case 0x9E:
		case 0x9F:
		case 0xA0:
		case 0xA1:
		case 0xA2:
		case 0xA3:
		case 0xA4:
		case 0xA5:
		case 0xA6:
		case 0xA7:
		case 0xA8:
		case 0xA9:
		case 0xAA:
		case 0xAB:
		case 0xAC:
		case 0xAD:
		case 0xAE:
		case 0xAF:
		case 0xB0:
		case 0xB1:
		case 0xB2:
		case 0xB3:
		case 0xB4:
		case 0xB5:
		case 0xB6:
		case 0xB7:
		case 0xB8:
		case 0xB9:
		case 0xBA:
		case 0xBB:
		case 0xBC:
		case 0xBD:
		case 0xBE:
		case 0xBF: goto yy5;
		default: goto yy2;
	}
yy34:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x80:
		case 0x81:
		case 0x86:
		case 0x87:
		case 0x88:
		case 0x89:
		case 0x8A:
		case 0x8B:
		case 0x8C:
		case 0x8D:
		case 0x8E:
		case 0x8F:
		case 0x90:
		case 0x91:
		case 0xA0:
		case 0xA1:
		case 0xA2:
		case 0xA3:
		case 0xA4:
		case 0xAC:
		case 0xAE: goto yy5;
		default: goto yy2;
	}
yy35:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0xB0:
		case 0xB1:
		case 0xB2:
		case 0xB3:
		case 0xB4:
		case 0xB6:
		case 0xB7:
		case 0xBA:
		case 0xBB:
		case 0xBC:
		case 0xBD:
		case 0xBF: goto yy5;
		default: goto yy2;
	}
yy36:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x86:
		case 0x88:
		case 0x89:
		case 0x8A:
		case 0x8C:
		case 0x8E:
		case 0x8F:
		case 0x90:
		case 0x91:
		case 0x92:
		case 0x93:
		case 0x94:
		case 0x95:
		case 0x96:
		case 0x97:
		case 0x98:
		case 0x99:
		case 0x9A:
		case 0x9B:
		case 0x9C:
		case 0x9D:
		case 0x9E:
		case 0x9F:
		case 0xA0:
		case 0xA1:
		case 0xA3:
		case 0xA4:
		case 0xA5:
		case 0xA6:
		case 0xA7:
		case 0xA8:
		case 0xA9:
		case 0xAA:
		case 0xAB:
		case 0xAC:
		case 0xAD:
		case 0xAE:
		case 0xAF:
		case 0xB0:
		case 0xB1:
		case 0xB2:
		case 0xB3:
		case 0xB4:
		case 0xB5:
		case 0xB6:
		case 0xB7:
		case 0xB8:
		case 0xB9:
		case 0xBA:
		case 0xBB:
		case 0xBC:
		case 0xBD:
		case 0xBE:
		case 0xBF: goto yy5;
		default: goto yy2;
	}
yy37:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x80:
		case 0x81:
		case 0x82:
		case 0x83:
		case 0x84:
		case 0x85:
		case 0x86:
		case 0x87:
		case 0x88:
		case 0x89:
		case 0x8A:
		case 0x8B:
		case 0x8C:
		case 0x8D:
		case 0x8E:
		case 0x8F:
		case 0x90:
		case 0x91:
		case 0x92:
		case 0x93:
		case 0x94:
		case 0x95:
		case 0x96:
		case 0x97:
		case 0x98:
		case 0x99:
		case 0x9A:
		case 0x9B:
		case 0x9C:
		case 0x9D:
		case 0x9E:
		case 0x9F:
		case 0xA0:
		case 0xA1:
		case 0xA2:
		case 0xA3:
		case 0xA4:
		case 0xA5:
		case 0xA6:
		case 0xA7:
		case 0xA8:
		case 0xA9:
		case 0xAA:
		case 0xAB:
		case 0xAC:
		case 0xAD:
		case 0xAE:
		case 0xAF:
		case 0xB0:
		case 0xB1:
		case 0xB2:
		case 0xB3:
		case 0xB4:
		case 0xB5:
		case 0xB7:
		case 0xB8:
		case 0xB9:
		case 0xBA:
		case 0xBB:
		case 0xBC:
		case 0xBD:
		case 0xBE:
		case 0xBF: goto yy5;
		default: goto yy2;
	}
yy38:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x80:
		case 0x81:
		case 0x8A:
		case 0x8B:
		case 0x8C:
		case 0x8D:
		case 0x8E:
		case 0x8F:
		case 0x90:
		case 0x91:
		case 0x92:
		case 0x93:
		case 0x94:
		case 0x95:
		case 0x96:
		case 0x97:
		case 0x98:
		case 0x99:
		case 0x9A:
		case 0x9B:
		case 0x9C:
		case 0x9D:
		case 0x9E:
		case 0x9F:
		case 0xA0:
		case 0xA1:
		case 0xA2:
		case 0xA3:
		case 0xA4:
		case 0xA5:
		case 0xA6:
		case 0xA7:
		case 0xA8:
		case 0xA9:
		case 0xAA:
		case 0xAB:
		case 0xAC:
		case 0xAD:
		case 0xAE:
		case 0xAF:
		case 0xB0:
		case 0xB1:
		case 0xB2:
		case 0xB3:
		case 0xB4:
		case 0xB5:
		case 0xB6:
		case 0xB7:
		case 0xB8:
		case 0xB9:
		case 0xBA:
		case 0xBB:
		case 0xBC:
		case 0xBD:
		case 0xBE:
		case 0xBF: goto yy5;
		default: goto yy2;
	}
yy39:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x80:
		case 0x81:
		case 0x82:
		case 0x83:
		case 0x84:
		case 0x85:
		case 0x86:
		case 0x87:
		case 0x88:
		case 0x89:
		case 0x8A:
		case 0x8B:
		case 0x8C:
		case 0x8D:
		case 0x8E:
		case 0x8F:
		case 0x90:
		case 0x91:
		case 0x92:
		case 0x93:
		case 0x94:
		case 0x95:
		case 0x96:
		case 0x97:
		case 0x98:
		case 0x99:
		case 0x9A:
		case 0x9B:
		case 0x9C:
		case 0x9D:
		case 0x9E:
		case 0x9F:
		case 0xA0:
		case 0xA1:
		case 0xA2:
		case 0xA3:
		case 0xA4:
		case 0xA5:
		case 0xA6:
		case 0xA7:
		case 0xA8:
		case 0xA9:
		case 0xAA:
		case 0xAB:
		case 0xAC:
		case 0xAD:
		case 0xAE:
		case 0xAF:
		case 0xB1:
		case 0xB2:
		case 0xB3:
		case 0xB4:
		case 0xB5:
		case 0xB6:
		case 0xB7:
		case 0xB8:
		case 0xB9:
		case 0xBA:
		case 0xBB:
		case 0xBC:
		case 0xBD:
		case 0xBE:
		case 0xBF: goto yy5;
		default: goto yy2;
	}
yy40:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x80:
		case 0x81:
		case 0x82:
		case 0x83:
		case 0x84:
		case 0x85:
		case 0x86:
		case 0x87:
		case 0x88:
		case 0x89:
		case 0x8A:
		case 0x8B:
		case 0x8C:
		case 0x8D:
		case 0x8E:
		case 0x8F:
		case 0x90:
		case 0x91:
		case 0x92:
		case 0x93:
		case 0x94:
		case 0x95:
		case 0x96:
		case 0x99:
		case 0xA0:
		case 0xA1:
		case 0xA2:
		case 0xA3:
		case 0xA4:
		case 0xA5:
		case 0xA6:
		case 0xA7:
		case 0xA8:
		case 0xA9:
		case 0xAA:
		case 0xAB:
		case 0xAC:
		case 0xAD:
		case 0xAE:
		case 0xAF:
		case 0xB0:
		case 0xB1:
		case 0xB2:
		case 0xB3:
		case 0xB4:
		case 0xB5:
		case 0xB6:
		case 0xB7:
		case 0xB8:
		case 0xB9:
		case 0xBA:
		case 0xBB:
		case 0xBC:
		case 0xBD:
		case 0xBE:
		case 0xBF: goto yy5;
		default: goto yy2;
	}
yy41:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x80:
		case 0x81:
		case 0x82:
		case 0x83:
		case 0x84:
		case 0x85:
		case 0x86:
		case 0x87:
		case 0x88: goto yy5;
		default: goto yy2;
	}
yy42:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x90:
		case 0x91:
		case 0x92:
		case 0x93:
		case 0x94:
		case 0x95:
		case 0x96:
		case 0x97:
		case 0x98:
		case 0x99:
		case 0x9A:
		case 0x9B:
		case 0x9C:
		case 0x9D:
		case 0x9E:
		case 0x9F:
		case 0xA0:
		case 0xA1:
		case 0xA2:
		case 0xA3:
		case 0xA4:
		case 0xA5:
		case 0xA6:
		case 0xA7:
		case 0xA8:
		case 0xA9:
		case 0xAA:
		case 0xAF:
		case 0xB0:
		case 0xB1:
		case 0xB2: goto yy5;
		default: goto yy2;
	}
yy43:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0xA0:
		case 0xA1:
		case 0xA2:
		case 0xA3:
		case 0xA4:
		case 0xA5:
		case 0xA6:
		case 0xA7:
		case 0xA8:
		case 0xA9:
		case 0xAA:
		case 0xAB:
		case 0xAC:
		case 0xAD:
		case 0xAE:
		case 0xAF:
		case 0xB0:
		case 0xB1:
		case 0xB2:
		case 0xB3:
		case 0xB4:
		case 0xB5:
		case 0xB6:
		case 0xB7:
		case 0xB8:
		case 0xB9:
		case 0xBA:
		case 0xBB:
		case 0xBC:
		case 0xBD:
		case 0xBE:
		case 0xBF: goto yy5;
		default: goto yy2;
	}
yy44:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x80:
		case 0x81:
		case 0x82:
		case 0x83:
		case 0x84:
		case 0x85:
		case 0x86:
		case 0x87:
		case 0x88:
		case 0x89:
		case 0x8A:
		case 0xAE:
		case 0xAF:
		case 0xB1:
		case 0xB2:
		case 0xB3:
		case 0xB4:
		case 0xB5:
		case 0xB6:
		case 0xB7:
		case 0xB8:
		case 0xB9:
		case 0xBA:
		case 0xBB:
		case 0xBC:
		case 0xBD:
		case 0xBE:
		case 0xBF: goto yy5;
		default: goto yy2;
	}
yy45:
	yych = *++YYCURSOR;
	switch (yych) {
		case 0x80:
		case 0x81:
		case 0x82:
		case 0x83:
		case 0x84:
		case 0x85:
		case 0x86:
		case 0x87:
		case 0x88:
		case 0x89:
		case 0x8A:
		case 0x8B:
		case 0x8C:
		case 0x8D:
		case 0x8E:
		case 0x8F:
		case 0x90:
		case 0x91:
		case 0x92:
